test/zinc_source/compile_errors/concurrency/08_select_receive_from_channel_parameter.zn
// expected-error: cannot receive from channel parameter

fn helper(values) {
    select {
        case value = <-values {
            print("{value}")
        }
    }
}

fn main() {
    values = chan()
    helper(values)
}
